# python-reusable-workflows

./: .editorconfig  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  releaserc.toml
.github/actions/dispatch/: action.yaml
.github/actions/python-matrix/: action.yaml
.github/actions/setup-variables/: action.yaml
.github/workflows/: ci.yaml  pre-commit.yaml  publish.yaml  release.yaml  test.yaml
src/sample_app/: __init__.py  cli.py
tests/: cli_test.py
